# volmir-api

./: README.md  db.sqlite3  pyproject.toml  start-docker.sh
.github/workflows/: test-on-pr.yml
api/: models.py  tests.py
api/auth/login/: login_logic.py  login_view.py  urls.py
api/auth/signup/: signup_logic.py  signup_view.py
api/migrations/: 0001_initial.py  0002_user_xp.py  0003_user_first_name_user_last_name.py  0004_task.py  0005_post.py
api/models/signup/: signup_model.py
api/posts/add_post/: urls.py  user_post_logic.py  user_post_view.py
api/posts/get_all_posts/: get_all_posts_logic.py  get_all_posts_view.py  urls.py
api/pydantic_models/post_models/add_post_model/: add_post_model.py
api/pydantic_models/post_models/get_all_posts_model/: get_all_posts_model.py
api/pydantic_models/signup/: signup_model.py
api/pydantic_models/user_card_data_response/: user_card_data_response.py
api/task/add_task/: add_task_logic.py  add_task_view.py  urls.py
api/task/all_user_tasks/: get_all_user_tasks_view.py  urls.py
api/task/complete_task/: complete_task_logic.py  urls.py
api/task/delete_task/: delete_task_logic.py  urls.py
api/task/not_completed_task/: not_completed_logic.py  urls.py
api/user_card_data/: get_user_card_data.py  urls.py
docker-config/: Dockerfile  docker-compose.yml  start-docker.sh
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/site/: 404.html  index.html
documentation/site/search/: search_index.json
terraform/: deploy.tf
volmir/: manage.py  settings.py  urls.py
volmir/volmir/: asgi.py  wsgi.py
(+6 files in other folders)
